Use final and safer collection accessors
Add final qualifiers to method parameters and local variables and replace fragile index-based accesses with safer alternatives (getFirst(), isEmpty(), getOrDefault(), Optional/getFirst) across multiple classes. Also modernize metadata and stream usage, minor null-safety and readability improvements in Pet lifecycle, spawning/despawning, mounts, commands and editor item handling. These are refactor-only changes intended to improve code clarity and reduce potential NPEs; no intended behavior changes.